@@ -1,11 +1,11 @@
 Tcl/Tk 8.4 for Windows, Binary Distribution
 
-RCS: @(#) $Id: README.binary,v 1.33.2.13 2006/03/07 05:30:30 dgp Exp $ 
+RCS: @(#) $Id$ 
 
 1. Introduction
 --------------- 
 
-This directory contains the binary distribution of Tcl/Tk 8.4.13 for
+This directory contains the binary distribution of Tcl/Tk 8.4.14 for
 Windows.  It was compiled with Microsoft Visual C++ 6.0 using Win32
 API, so that it will run under Windows NT, 95, 98 and 2000.
 
