@@ -1,5 +1,16 @@
 2006-05-04  Don Porter  <dgp@users.sourceforge.net>
 
+	* README:		Bump version number to 8.4.14
+	* generic/tcl.h:
+	* tools/tcl.wse.in:
+	* unix/configure.in:
+	* unix/tcl.spec:
+	* win/README.binary:
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.13
+	* win/configure:
+
 	* generic/tclExecute.c (ExprSrandFunc):	Restore acceptance of wide
 	* tests/expr-old.test: integer values by srand() [Bug 1480509].
 
